# django-tsunami

./: MANIFEST.in  README.md  setup.cfg  setup.py
tsunami/: __init__.py  admin.py  aggregates.py  apps.py  helpers.py  middleware.py  models.py  settings.py  tracking.py
tsunami/admin/: __init__.py  events.py
tsunami/migrations/: 0001_initial.py  0002_alter_eventaggregate_id.py  0003_rename_event_target_ctype_target_id_tsunami_eve_target__db9ae6_idx_and_more.py
